Deploy sample app in Github pages and improve readme